fix: add margin to code blocks for improved spacing

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -58,3 +58,8 @@
     0%, 100% { opacity: 0.6; }
     50% { opacity: 1; background-color: #37823b; }
 }
+
+pre.chroma {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
